# stocks-ds

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: example_tickers.txt
notebooks/: 00_data_acquisition.ipynb  00_data_acquisition.py  01_eda.ipynb  02_feature_engineering.ipynb
scripts/: download_data.py
src/stocks/: __init__.py  config.py
src/stocks/data/: __init__.py  loaders.py
src/stocks/features/: __init__.py  technical.py
src/stocks/utils/: __init__.py  io.py
tests/: test_loaders.py
